# NeuLidarCalibration

./: CApplication.cpp  CApplication.h  CMainWin.qrc  CMakeLists.txt  CalibrationAlgorithm.cpp  CalibrationAlgorithm.h  CalibrationProcess.cpp  CalibrationProcess.cpp.bak  CalibrationProcess.h  LaserInstrumentControl.cpp  LaserInstrumentControl.h  MainWin.cpp  MainWin.cpp.bak  MainWin.h  MainWin.h.bak  MainWin.ui  NeuLidarCalibration.rc  NeuLidarCalibration.sln  NeuLidarCalibration.vcxproj  NeuLidarCalibration.vcxproj.filters  Neuvition_Auto.cpp  Neuvition_Auto.h  README.md  SerialPort.cpp  SerialPort.h  SlideControl.cpp  SlideControl.h  main.cpp  resource.h  test.cpp  test.h  test.ui  ui_CVTKWidget.h  ui_MainWin.h  ui_test.h  untitled1.pro
Common/: CGlobalSignalSlot.cpp  CGlobalSignalSlot.h  CViewController.cpp  CViewController.h  boost_common_defs.h  pcl_common_defs.h
Common/LidarModule/: CLidarINeuvEvent.cpp  CLidarINeuvEvent.h  CMatObserver.cpp  CMatObserver.h  CMatSubject.cpp  CMatSubject.h  CNeuvLidarControl.cpp  CNeuvLidarControl.h  CNeuvSubject.cpp  CNeuvSubject.h  Subject.cpp  Subject.h  globalLidarCallbackFun.cpp  globalLidarCallbackFun.h  lidar_common_defs.cpp  lidar_common_defs.h
Common/LidarModule/Expand/: CNeuvObserver.cpp  CNeuvObserver.h  test_lidar_data_process.h
Common/VTKModule/: CPCLPainter.cpp  CPCLPainter.h  CVTKWidget.cpp  CVTKWidget.h  CVTKWidget.ui  pcl_extern_func.cpp  pcl_extern_func.h
NlinfitLib/include/: NlinfitSolve.h
NlinfitLib/lib_11/: NlinfitSolve.lib
NlinfitLib/matlab/include/MatlabCppSharedLib/detail/: matlab_runtime_version.hpp
NlinfitLib/matlab/include/nav/: planningcodegen_CommonCSMetric.hpp  planningcodegen_DistanceMetric.hpp  planningcodegen_ReedsSheppMetric.hpp  planningcodegen_SearchTree.hpp
NlinfitLib/matlab/include/sharedxcp/xcpmpl/: cantl.h  xcpSfuncIFC.h
NlinfitLib/matlab/include/slrealtime/libsrc/IP/: ip.hpp  udp.hpp
NlinfitLib/matlab/include/win64/: mwcomutil.h  mwcomutil.tlb  mwcomutil_i.c
NlinfitLib/matlab/lib/win64/microsoft/: SimulinkBlock.lib  asynciocoder.lib  display_core.lib  gpu.lib  gpumexbinder.lib  imagesdatatypescodegenc.lib  imagesdatatypescodegenmexutils.lib  imagesdatatypesimage.lib  imagesdatatypesopencvutils.lib  libMatlabCppSharedLib.lib  libMatlabDataArray.lib  libMatlabEngine.lib  libcovrt.lib  libemlrt.lib  libfixedpoint.lib  libmex.lib  libmwacfObjectDetector.lib  libmwautonomouscodegen.lib  libmwblas.lib  libmwblascompat32.lib  libmwboxfilter.lib  libmwboxfilter3.lib  libmwbwdistEDT.lib  libmwbwdistEDTFT.lib  libmwbwdistEDTFT_tbb.lib  libmwbwdistEDT_tbb.lib  libmwbwlookup.lib  libmwbwpackc.lib  libmwbwpackctbb.lib  libmwbwunpackc.lib  libmwbwunpackctbb.lib  libmwcannythresholding_tbb.lib  libmwcgir_construct.lib  libmwcgxeooprt.lib  libmwcgxert.lib  libmwcoder_CodeInstrHostAppSvc.lib  libmwcoder_CodeInstrTgtAppSvc.lib  libmwcoder_CoderAssumpHostAppSvc.lib  libmwcoder_CoderAssumpTgtAppSvc.lib  libmwcoder_ParamTuningTgtAppSvc.lib  (+104 more)
NlinfitLib/matlab/lib/win64/mingw64/: SimulinkBlock.lib  asynciocoder.lib  display_core.lib  gpu.lib  gpumexbinder.lib  imagesdatatypescodegenc.lib  imagesdatatypescodegenmexutils.lib  imagesdatatypesimage.lib  imagesdatatypesopencvutils.lib  libMatlabCppSharedLib.lib  libMatlabDataArray.lib  libMatlabEngine.lib  libcovrt.lib  libemlrt.lib  libfixedpoint.lib  libmwComputeMetric.lib  libmwacfObjectDetector.lib  libmwautonomouscodegen.lib  libmwblas.lib  libmwblascompat32.lib  libmwboxfilter.lib  libmwboxfilter3.lib  libmwbwdistEDT.lib  libmwbwdistEDTFT.lib  libmwbwdistEDTFT_tbb.lib  libmwbwdistEDT_tbb.lib  libmwbwlookup.lib  libmwbwlookup_tbb.lib  libmwbwpackc.lib  libmwbwpackctbb.lib  libmwbwunpackc.lib  libmwbwunpackctbb.lib  libmwcannythresholding_tbb.lib  libmwcgir_construct.lib  libmwcgxeooprt.lib  libmwcgxert.lib  libmwcoder_CodeInstrHostAppSvc.lib  libmwcoder_CodeInstrTgtAppSvc.lib  libmwcoder_CoderAssumpHostAppSvc.lib  libmwcoder_CoderAssumpTgtAppSvc.lib  (+113 more)
PTZModule/: CNeuPTZCore.cpp  CNeuPTZCore.h  CPTZBaseController.cpp  CPTZBaseController.h  CPTZBasePanel.cpp  CPTZBasePanel.h  CPTZBasePanel.ui  CPTZConfig.cpp  CPTZConfig.h  CPTZCore.cpp  CPTZCore.h  CPTZStateManage.h  CPTZUdpCore.cpp  CPTZUdpCore.h
